--- a/personal.htm
+++ b/personal.htm
@@ -184,7 +184,90 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<font face="Times New Roman">
 		2020.05: Dr. Xin Liu has been selected to highly competitive Academy of 
 	Finland postdoctoral position 2020.09-2023.08.</font></p>
-	</td>
+	<p style="margin-top: 24px; margin-bottom: 24px"><b><u><font face="Times New Roman">
+	<span lang="en-us">Downloading: Databases:</span></font></u></b></p>
+	<p><span style="font-family: Times New Roman; font-weight:700" lang="en-us">
+	Databases:</span></p>
+	<ul>
+		<li><span style="font-family: Times New Roman" lang="en-us"><b>OuluVS 
+		database</b>: </span>
+		<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif">It 
+		includes the video and audio data for 20 subjects uttering ten 
+		phrases:&nbsp;Hello, Excuse me, I am sorry, Thank you, Good bye, See you, 
+		Nice to meet&nbsp;you, You are welcome, How are you, Have a good time. Each 
+		person&nbsp;spoke each&nbsp;phrase five times.&nbsp;There are also videos with head 
+		motion from front to left, from&nbsp;front to right, without utterance, five 
+		times for each person. </span>
+		<span lang="en-us" style="font-size: 12.0pt; font-family: 'Times New Roman',serif">
+		The details and the baseline results for visual speech recognition can 
+		be found in:</span></li>
+	</ul>
+	<p class="MsoNormal"><span style="font-family: Times New Roman">Zhao G, 
+	Barnard M &amp; Pietik&auml;inen M (2009). Lipreading with local spatiotemporal 
+	descriptors. IEEE Transactions on Multimedia 11(7):1254-1265.</span></p>
+	<p class="MsoNormal">
+	<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif">The 
+	database can be used, for example,&nbsp; in studying the visual speech 
+	recognition (lipreading).<span style="font-family: Times New Roman,serif; font-size:12.0pt"><span lang="en-us">
+	</span>If yo</span></span><span style="font-family: Times New Roman" lang="en-us">u 
+	want to get a copy, please contact
+	<a href="mailto:firstname.lastname@oulu.fi">me</a>.</span></p>
+	<ul>
+		<li>
+		<p class="MsoNormal">
+		<span style="font-family: Times New Roman" lang="en-us"><b>Oulu-CASIA 
+		NIR&amp;VIS facial expression database</b>: </span>
+		<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif">It 
+		contains videos with the six typical expressions&nbsp; (happiness, 
+		sadness, surprise, <br>anger, fear, disgust) from 80 subjects captured 
+		with two imaging systems, NIR (Near Infrared) and VIS (Visible light), 
+		under three different<span lang="en-us">
+		</span>illumination conditions: normal indoor illumination, weak 
+		illumination (only computer display is on) and dark illumination (all 
+		lights are off).<span lang="en-us"> </span>The database can be used, for 
+		example,&nbsp; in studying the effects of illumination variations<span lang="en-us"> </span>
+		to facial expressions, cross-imaging-system facial expression 
+		recognition or face recognition.</span></p>
+		</li>
+	</ul>
+	<p class="MsoNormal">
+	<span style="font-family: Times New Roman" lang="en-us">This database has 
+	been released. If you are interested, please contact
+	<a href="mailto:firstname.lastname@oulu.fi">me</a>.</span></p>
+	<div dir="ltr" id="page" lang="en">
+		<div dir="ltr" id="content" lang="en">
+			<ul>
+				<li>
+				<p class="line891"><b>
+				<span style="font-family: Times New Roman">
+				<a href="http://www.cse.oulu.fi/SPOSDatabase">SPOS database</a>				</span></b>
+				<span style="font-size: 12.0pt; font-family: 'Times New Roman',serif">
+				- spontaneous and posed facial expressions database </span>
+				<span id="line-35" class="anchor"></span></li>
+			</ul>
+			<span id="bottom" class="anchor"></span></div>
+	</div>
+	<div dir="ltr" id="page0" lang="en">
+		<div dir="ltr" id="content0" lang="en">
+			<p class="line862"><span style="font-family: Times New Roman">SPOS 
+			database includes spontaneous and posed facial expressions of 7 
+			subjects. Emotional movie clips were shown to subjects to induce 
+			spontaneous facial expressions, which include six categories of 
+			basic emotions (happy, sad, anger, surprise, fear disgust). Subjects 
+			were also asked to pose the six kinds of facial expressions after 
+			watching movie clips. Data are recorded by both visual and near 
+			infer-red camera. All together 84 posed and 147 spontaneous facial 
+			expression clips were labeled out from the starting point to the 
+			apex. </span></p>
+			<p class="line874"><span style="font-family: Times New Roman">So 
+			far, spontaneous and posed facial expressions are usually found in 
+			different databases. The difference between databases (different 
+			experimental setting and different participants) hindered researches 
+			which considered both spontaneous and posed facial expressions. This 
+			database offers data collected on the same participants and under 
+			the same recording condition, which can be used for comparing or 
+			distinguishing spontaneous and posed facial expressions</span></div>
+	</div></td>
   </tr>
   </table>
 
