--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -207,10 +207,18 @@ Visiting Professor Award, 2016</font></span></a></p>
 <font size="4">NVIDIA 
 hardware grant, 2015</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
-<font size="4">-- </font> </span><span lang="EN-US" style="font-family: Times New Roman">
-<font size="4">Award of 
-Academy research fellowship from Academy of Finland, 2011</font></span></p>
+<font size="4">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">-- 
+</span>
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+Most remembered poster of the day with ICCV 2011 for the work ¡°Recognising 
+Spontaneous Facial Micro-expressions¡±.</span></font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">-- 
+<span style="font-family: Times New Roman; font-style:normal; font-variant:normal; font-weight:normal">
+Award of 
+Academy research fellowship from Academy of Finland, 2011</span></span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">-- </font> </span><span lang="EN-US" style="font-family: Times New Roman">
@@ -218,16 +226,15 @@ Academy research fellowship from Academy of Finland, 2011</font></span></p>
 postdoc project from Academy of Finland, 2008</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
-<font size="4">-- </font> </span><span lang="EN-US" style="font-family: Times New Roman">
-<font size="4">Honor of 
-outstanding doctoral dissertation ''Video-based Gait Recognition'' of Institute of 
-Computing Technology, Chinese Academy of Sciences, 2005</font></span></p>
+<font size="4">-- </font> </span>
+<font size="4"><span lang="EN-US" style="font-family: Times New Roman">
+Honor </span><span style="font-family: Times New Roman">of excellent doctoral dissertation ''Video-based Gait Recognition'' of Institute of 
+Computing Technology, Chinese Academy of Sciences, 2005</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
-<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
-<font size="4">-- </font> </span><span lang="EN-US" style="font-family: Times New Roman">
-<font size="4">Honor of 
-outstanding master thesis ''The Generation Technology and Application of 
-Stereoscopic Dynamic Images'' of North China University of Technology, 2002.</font></span></p>
+<font size="4"><span style="font-family: Times New Roman">-- Honor of 
+excellent master the</span><span lang="EN-US" style="font-family: Times New Roman">sis 
+''The Generation Technology and Application of Stereoscopic Dynamic Images'' of 
+North China University of Technology, 2002.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 <font size="4">-- </font> </span><span lang="EN-US" style="font-family: Times New Roman">
