--- a/main_experience.htm
+++ b/main_experience.htm
@@ -92,6 +92,12 @@ time): CAD Center, North China University of Technology.</font></p>
 	Towards vision-based emotion AI (EmotionAI)</b>.&nbsp; 798 750 &#8364;. </span></font><span lang="EN-US"><font size="4">Overall success rate: 
 	4%.</font></span></li>
 	<li>
+	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; text-autospace: ideograph-numeric ideograph-other; line-height: 150%; margin-left: 21.0pt; margin-bottom: 0cm">
+	<font size="4"><span style="color: black">2021.01.01-2022.12.31: <b>AI Forum</b>: 
+	Artificial Intelligence Digital Revolution, funded by Ministry of Education 
+	and Culture of Finland. 833 333 &#8364; (Co-PI, with Haaga-Helia University of 
+	Applied Sciences, Jyv&auml;skyl&auml; University, and Turku University)</span></font></li>
+	<li>
 	<p class="MsoListParagraphCxSpFirst" style="text-align: justify; text-justify: inter-ideograph; text-indent: -21.0pt; line-height: 150%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt; margin-bottom: 0cm">
 	<font size="4"><span style="color: black">2020.01.01-2022.12.31: <b>Academy 
 	ICT 2023 project</b> ''Context-aware autonomous neural network learning'': 571 
