--- a/personal.htm
+++ b/personal.htm
@@ -48,10 +48,10 @@ selected to the highly competitive Academy Research Fellow position, and in
 authored or co-authored more than <span lang="en-us">24</span>0 papers in journals and conferences, and 
 has served </font></span><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 14200 citations in Google Scholar (h-index 
-54). She is Co-Program chair of ACM International Conference on Multimodal 
-Interaction 2021 (ICMI), Special 
-Sessions/Panels Chairs for FG 2023, and general chair for ICBEA 2020. She was general chair for ICBEA 2019, Co-Chair for Late Breaking 
+currently over 14700 citations in Google Scholar (h-index 
+55). She is Co-Program chair of ACM International Conference on Multimodal 
+Interaction 2021 (ICMI), and Special 
+Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
 Results of ICMI 2019, co-publicity c</span></font><span style="font-family: Times New Roman; font-weight: normal"><font size="4">hair 
 for FG 2018, has served as area chairs for several conferences and is associate 
 editor for Pattern Recognition, IEEE Transactions on Circuits and Systems for 
