--- a/publications.htm
+++ b/publications.htm
@@ -133,19 +133,20 @@ on Finnish Newspaper Kaleva in Mar. 10, 2015.</font></p>
 reading hidden emotions from spontaneous microexpressions</a> has been&nbsp;reported 
 by
 <a href="http://www.technologyreview.com/view/543501/machine-vision-algorithm-learns-to-recognize-hidden-facial-expressions/">
-MIT Technology Review</a> (http://www.technologyreview.com/view/543501/machine-vision-algorithm-learns-to-recognize-hidden-facial-expressions/), 
+MIT Technology Review</a>, 
 Nov. 2015.</font></p>
 <p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
-<font size="4">6. Work on micro-expression was reported by Savon Sanomat (<a href="http://www.savonsanomat.fi/kotimaa/Kone-n&auml;kee-ihmisen-salaiset-tunteet-¨C-toistaiseksi-vain-tutkijankammiossa/1055617">http://www.savonsanomat.fi/kotimaa/Kone-n%C3%A4kee-ihmisen-salaiset-tunteet-%E2%80%93-toistaiseksi-vain-tutkijankammiossa/1055617</a>), 
-Kaleva and other medias, Oct. 2017.</font></p>
+<font size="4">6. Work on micro-expression was reported by 
+<a target="_blank" href="http://www.savonsanomat.fi/kotimaa/Kone-n&auml;kee-ihmisen-salaiset-tunteet-¨C-toistaiseksi-vain-tutkijankammiossa/1055617">Savon Sanomat</a>, Kaleva and other medias, Oct. 2017.</font></p>
 <p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
-<font size="4">7. Work reported by Academy of Finland (<a href="https://www.aka.fi/fi/akatemia/media/Ajankohtaiset-uutiset/2018/tekoalylta-odotetaan-myos-tunnetaitoja/">https://www.aka.fi/fi/akatemia/media/Ajankohtaiset-uutiset/2018/tekoalylta-odotetaan-myos-tunnetaitoja/</a>), 
+<font size="4">7. Work reported by 
+<a target="_blank" href="https://www.aka.fi/fi/akatemia/media/Ajankohtaiset-uutiset/2018/tekoalylta-odotetaan-myos-tunnetaitoja/">Academy of Finland</a>, 
 Jan. 2018.</font></p>
 <p style="text-indent: 6px; margin: 6.0pt 0in" class="MsoNormal">
-<font size="4">8. University Blog about Emotion AI: </font><span lang="EN-US">
-<a target="_blank" title="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai" style="color: #0563C1; text-decoration: underline; text-underline: single" href="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai">
-<font size="4">https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai</font></a><font size="4"><a target="_blank" title="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai" style="text-decoration: underline; text-underline: single" href="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai">,</a> 
-Nov. 2020.</font></span></p>
+<font size="4">8. University Blog about 
+<a target="_blank" href="https://www.oulu.fi/blogs/science-with-arctic-attitude/emotion-ai">Emotion AI</a>: </font>
+<span lang="EN-US">
+<font size="4">Nov. 2020.</font></span></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2021</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
@@ -155,8 +156,7 @@ NAS-FAS: Static-Dynamic Central Difference Network Search for Face Anti-Spoofing
 IEEE Transactions on Pattern Analysis and Machine Intelligence journal (TPAMI). 
 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;244.&nbsp;Shu 
-Xin, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
+<span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;244.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
 for cross-modal retrieval</u>. Pattern Recognition. 2021.</font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;2<span lang="en-us">43</span>. Muhterem Dindar, Sanna J&auml;rvel&auml;, Sara 
