--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -211,8 +211,9 @@ hardware grant, 2015</font></span></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">-- 
 </span>
 <span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
-Most remembered poster of the day with ICCV 2011 for the work ¡°Recognising 
-Spontaneous Facial Micro-expressions¡±.</span></font></p>
+Most remembered poster of the day with ICCV 2011 for the work </span><span style="font-family: Times New Roman">
+''</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">Recognising 
+Spontaneous Facial Micro-expressions</span><span style="font-family: Times New Roman">''</span><span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">.</span></font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <font size="4">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">-- 
