--- a/education.htm
+++ b/education.htm
@@ -46,8 +46,8 @@ Technology.</font></span></p></li>
 	</li>
 	<li>
 	<p class="MsoNormal" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-	<font size="4">Honor of outstanding doctoral dissertation of 
-Institute of Computing Technology, Chinese Academy of Sciences, 2005</font></p></li>
+	<font size="4">Honor of excellent doctoral dissertation of Institute of 
+	Computing Technology, Chinese Academy of Sciences, 2005</font></p></li>
 	<li>
 	<p class="MsoNormal" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
 	<font size="4">Supervisor: Prof. Hua Li</font></p>
@@ -67,7 +67,8 @@ of Engineering, North China University of Technology, Beijing, China. </font> </
 Application of Stereoscopic Dynamic Images</font></span></p></li>
 	<li>
 	<p class="MsoNormal" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
-	<span lang="EN-US"><font size="4">Honor of outstanding master thesis of North 
+	<span lang="EN-US"><font size="4">Honor of </font></span>
+	<font size="4">excellent</font><span lang="EN-US"><font size="4"> master thesis of North 
 China University of Technology, 2002.</font></span></p></li>
 	<li>
 	<p class="MsoNormal" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
