--- a/publications.htm
+++ b/publications.htm
@@ -198,8 +198,8 @@ Skeleton-based Human Action Recognition</u>. IEEE Signal Processing Letters.
 202<span lang="en-us">1</span>.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;23<span lang="en-us">6</span>. Tong Zhang, Yuan Zong, Wenming Zheng, 
-C. L. Philip Chen, Xiaopeng Hong, Chuangao Tang, Zhen Cui, Guoying Zhao. 
-Cross-Database Micro-Expression Recognition: A Benchmark. IEEE Transactions on 
+C. L. Philip Chen, Xiaopeng Hong, Chuangao Tang, Zhen Cui, <b>Guoying Zhao</b>. 
+<u>Cross-Database Micro-Expression Recognition: A Benchmark</u>. IEEE Transactions on 
 Knowledge and Data Engineering, 2021.</font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">&nbsp;235. Xin Liu, Henglin Shi, Haoyu 
@@ -209,12 +209,13 @@ Video Dataset for Micro-Gesture Understanding and Emotion Analysis</u>. CVPR</fo
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <font face="Times New Roman" size="4">
 <span lang="EN-US" style="line-height: 115%">&nbsp;</span><span style="line-height: 115%">23<span lang="en-us">4</span>. Henglin, Wei Peng, Xin 
-Liu, Guoying Zhao. Graph Adversarial Learning for Noisy Skeleton-based 
-Action Recognition. Image Processing: Algorithms and Systems Conference, at 
+Liu, <b>Guoying Zhao</b>. <u>Graph Adversarial Learning for Noisy Skeleton-based 
+Action Recognition</u>. Image Processing: Algorithms and Systems Conference, at 
 IS&amp;T Electronic Imaging 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 115%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font face="Times New Roman" size="4">&nbsp;23<span style="line-height: 115%"><span lang="en-us">3</span>. Tuomas Varanka, Wei Peng, Guoying Zhao. Micro-Expression Recognition with Noisy 
-Labels. Human Vision and Electronic Imaging Conference, at IS&amp;T Electronic 
+<font face="Times New Roman" size="4">&nbsp;23<span style="line-height: 115%"><span lang="en-us">3</span>. Tuomas Varanka, Wei Peng, 
+<b>Guoying Zhao</b>. <u>Micro-Expression Recognition with Noisy 
+Labels</u>. Human Vision and Electronic Imaging Conference, at IS&amp;T Electronic 
 Imaging 2021.</span></font></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2020</b></font></span></p>
