--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -354,15 +354,18 @@ Aug. 20-24, 2006, Hongkong.</font></span></p>
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US">
 --</span></font><span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman" lang="EN-US"><font size="4">&nbsp;</font></span><span style="font-family: 'Times New Roman'; font-weight: 700" lang="en-us"><u><font size="4">Invited talks:</font></u></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
-<font size="4">ICPR Workshop on ''facial and body expressions, micro-expressions 
+<font size="4">Keynote talk ¡°Emotional Interfaces with Face Analysis¡± in ICPR Workshop on ''facial and body expressions, micro-expressions 
 and behavior recognition'', Jan. 10, 2021.</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; line-height: 200%; text-autospace: ideograph-numeric ideograph-other; margin-left: 21.0pt" class="MsoNormal">
+<font size="4">Invited talk ¡°Towards emotion AI and applications in Education¡± 
+in 5th Virtual Conference of Sino-Finnish Joint Learning Innovation Institute. 
+Nov. 25, 2020.</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
-<font size="4">9th International Conference on Computing and Pattern Recognition 
-(ICCPR 2020), Oct. 31, 2020</font></p>
+<font size="4">Invited talk ¡°Facial micro-expression analysis: Our roadmap¡± in 
+9th International Conference on Computing and Pattern Recognition (ICCPR 2020), Oct. 31, 2020</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
-<font size="4">IPM-AI Summer School 2020 (Aug. 22-26, 2020,
-<a href="http://cs.ipm.ac.ir/asoc2020/"><font face="Times New Roman">
-http://cs.ipm.ac.ir/asoc2020/</font></a>).</font></p>
+<font size="4">Invited talk ¡°Remote Heart Rate Measure from Videos¡± in IPM-AI Summer School 2020 (Aug. 22-26, 2020,
+<a href="http://cs.ipm.ac.ir/asoc2020/"><font face="Times New Roman">http://cs.ipm.ac.ir/asoc2020/</font></a>).</font></p>
 <p style="text-align: justify; text-justify: inter-ideograph; margin-left: 21.0pt; line-height:200%; text-autospace:ideograph-numeric ideograph-other" class="MsoNormal">
 <font size="4">Keynote talk ''Remote Heart Rate Measure from Videos: Methods and 
 Application in Atrial Fibrillation Detection'' in 12th International Conference 
