--- a/personal.htm
+++ b/personal.htm
@@ -48,7 +48,7 @@ selected to the highly competitive Academy Research Fellow position, and in
 authored or co-authored more than <span lang="en-us">24</span>0 papers in journals and conferences, and 
 has served </font></span><font size="4">
 <span style="font-family: Times New Roman; font-weight: normal">as a reviewer for many journals and conferences. Her papers have 
-currently over 14700 citations in Google Scholar (h-index 
+currently over 14800 citations in Google Scholar (h-index 
 55). She is Co-Program chair of ACM International Conference on Multimodal 
 Interaction 2021 (ICMI), and Special 
 Sessions/Panels Chairs for FG 2023. She was general chair for ICBEA (2019, 2020), Co-Chair for Late Breaking 
@@ -142,6 +142,16 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<font face="Times New Roman">
 		<u><b>Open positions</b></u>: Postdoctoral researchers, PhD students, Master thesis 
 		workers.</font></p>
+		<p><font face="Times New Roman">Call for Postdoctoral Researcher for 
+		Machine Vision and Signal Analysis: </font><font face="Times New Roman">
+		<a href="http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000010760&jc=1">
+		http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000010760&amp;jc=1</a>, 
+		Deadline: <b>Apr. 15, 2021</b>.</font></p>
+		<p><font face="Times New Roman">Call for Doctoral Student for Machine 
+		Vision and Signal Analysis: </font><font face="Times New Roman">
+		<a href="http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000010759&jc=1">
+		http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000010759&amp;jc=1</a>, 
+		Deadline: <b>Apr. 15, 2021</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
 		<p>
