--- a/personal.htm
+++ b/personal.htm
@@ -143,12 +143,14 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		<u><b>Open positions</b></u>: Postdoctoral researchers, PhD students, Master thesis 
 		workers.</font></p>
 		<p><font face="Times New Roman">Call for Postdoctoral Researcher for 
-		Machine Vision and Signal Analysis: </font><font face="Times New Roman">
+		Machine Vision and Signal Analysis: </font></p>
+		<p><font face="Times New Roman">
 		<a href="http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000010760&jc=1">
 		http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000010760&amp;jc=1</a>, 
 		Deadline: <b>Apr. 15, 2021</b>.</font></p>
 		<p><font face="Times New Roman">Call for Doctoral Student for Machine 
-		Vision and Signal Analysis: </font><font face="Times New Roman">
+		Vision and Signal Analysis: </font></p>
+		<p><font face="Times New Roman">
 		<a href="http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&lang=en&id=000010759&jc=1">
 		http://rekry.saima.fi/certiahome/open_job_view.html?did=5600&amp;lang=en&amp;id=000010759&amp;jc=1</a>, 
 		Deadline: <b>Apr. 15, 2021</b>.</font></p>
