--- a/professional_activities.htm
+++ b/professional_activities.htm
@@ -155,7 +155,7 @@ a{font-family:arial,sans-serif}
 
 <body>
 
-<p align="center" style="line-height: 200%"><b>
+<p align="center" style="line-height: 200%; margin-top:10px"><b>
 <span style="font-family: Times New Roman"><font size="5">PROFESSIONAL 
 ACTIVITIES</font></span></b></p>
 <p class="MsoListParagraph" style="text-indent: -21.0pt; line-height: 200%; margin-left: 21.0pt">
