--- a/publications.htm
+++ b/publications.htm
@@ -150,11 +150,15 @@ Jan. 2018.</font></p>
 <p class="MsoNormal" style="margin-top:0.5cm; margin-bottom:0.5cm">
 <span lang="en-us"><font size="5"><b>2021</b></font></span></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
-<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;2<span lang="en-us">46</span>. Zitong 
-Yu, Jun Wan, Yunxiao Qin, Xiaobai Li, Stan Z. Li and <b>Guoying Zhao</b>. <u>
-NAS-FAS: Static-Dynamic Central Difference Network Search for Face Anti-Spoofing</u>. 
+<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;247. Zitong 
+Yu, Jun Wan, Yunxiao Qin, Xiaobai Li, Stan Z. Li and Guoying Zhao. 
+NAS-FAS: Static-Dynamic Central Difference Network Search for Face Anti-Spoofing. 
 IEEE Transactions on Pattern Analysis and Machine Intelligence journal (TPAMI). 
 2021.</span></font></p>
+<p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
+<font size="4"><span style="font-family: 'Times New Roman',serif">&nbsp;246. Wei 
+Peng, Xiaopeng Hong, <b>Guoying Zhao</b>. <u>Graph Triplet Pooling for 3D 
+Skeleton Based Action Recognition</u>. Pattern Recognition. 2021.</span></font></p>
 <p class="MsoListParagraph" style="text-indent: -.25in; line-height: 150%; layout-grid-mode: char; text-autospace: none; margin-left: .25in; margin-right: 0in; margin-top: 6.0pt; margin-bottom: 6.0pt">
 <span style="font-family: 'Times New Roman',serif"><font size="4">&nbsp;245.&nbsp;Xin Shu, <b>Guoying Zhao</b>. <u>Scalable multi-label canonical correlation analysis 
 for cross-modal retrieval</u>. Pattern Recognition. 2021.</font></span></p>
