--- a/personal.htm
+++ b/personal.htm
@@ -156,12 +156,16 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		Deadline: <b>Apr. 15, 2021</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p style="margin-top: 24px; margin-bottom: 24px">
+		<font face="Times New Roman">2021.03: IEEE Finland Section best student 
+		conference paper award 2020, for our ICCV 2019 paper &quot;Zitong Yu, Wei Peng, Xiaobai Li, Xiaopeng Hong, Guoying Zhao. Remote 
+Heart Rate Measurement from Highly Compressed Facial Videos: an End-to-end Deep 
+Learning Solution with Video Enhancement. ICCV 2019.&quot;</font></p>
 		<p>
-		<font face="Times New Roman">
-		2020.10: Mr. Muzammil Behzad won the three minutes PhD thesis 
-		competition organized by ICIP2020:</font><span lang="EN-US" style="font-family: Times New Roman; color: #1F497D">
-		<a style="color: blue; text-decoration: underline; text-underline: single" href="https://2020.ieeeicip.org/3-minute-thesis-competition/">
-		https://2020.ieeeicip.org/3-minute-thesis-competition/</a>.</span><p>
+		<font face="Times New Roman">2020.10: Mr. Muzammil Behzad won the three minutes PhD thesis 
+		competition organized by ICIP2020:
+		<a href="https://2020.ieeeicip.org/3-minute-thesis-competition/">
+		https://2020.ieeeicip.org/3-minute-thesis-competition/</a>.</font><p>
 		<font face="Times New Roman">
 		2020.08: We have got the 2nd Place on Action Recognition Track of ECCV 
 		2020 VIPriors Challenges (with accuracy of 88.31%). More details can be 
