--- a/honors_awards.htm
+++ b/honors_awards.htm
@@ -168,6 +168,13 @@ AWARDS</span></b></p>
 <font size="4">-- IAPR Fellow, 2020 (For contributions to video analysis and 
 affective computing).</font></span></p>
 <p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
+<font size="4">
+<span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
+--
+<span style="font-family: Times New Roman; font-style: normal; font-variant: normal; font-weight: normal">
+IEEE Finland Section best student conference paper award 2020. </span></span>
+</font></p>
+<p style="text-align: justify; text-justify: inter-ideograph; text-indent: -20.9pt; margin-left: 20.9pt">
 <span style="font-style: normal; font-variant: normal; font-weight: normal; font-family: Times New Roman">
 <font size="4">-- 
 First place on Chalearn multi-modal face anti-spoofing attack detection 
