--- a/personal.htm
+++ b/personal.htm
@@ -156,6 +156,12 @@ baseline;mso-line-break-override:restrictions;punctuation-wrap:simple">
 		Deadline: <b>Apr. 15, 2021</b>.</font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px"><u><b>
 		<font face="Times New Roman">NEWS:</font></b></u></p>
+		<p style="margin-top: 24px; margin-bottom: 24px"><span lang="en-us">
+		<font face="Times New Roman">2021.03: </font></span>
+		<font face="Times New Roman"><b>The 2nd Multimodal Sentiment Analysis 
+		Challenge</b>: <a href="https://www.muse-challenge.org/muse2021">
+		https://www.muse-challenge.org/muse2021</a>, with ACM MM<span lang="en-us"> 
+		2021</span>. <span lang="en-us">Welcome to participate!</span></font></p>
 		<p style="margin-top: 24px; margin-bottom: 24px">
 		<font face="Times New Roman">2021.03: IEEE Finland Section best student 
 		conference paper award 2020, for our ICCV 2019 paper &quot;Zitong Yu, Wei Peng, Xiaobai Li, Xiaopeng Hong, Guoying Zhao. Remote 
